fixed button formatting on mobile

--- a/StudyMoney/public/css/researchCardExample.css
+++ b/StudyMoney/public/css/researchCardExample.css
@@ -12,7 +12,7 @@
 
 .cardinfo {
     max-width: 900px;
-    background-color: RGB(245,245,245);
+    background-color: RGB(250,250,250);
 	box-shadow: 0px 3px 10px #888888;
     z-index: -1;
 }
